# POC-BotFramework-MSTeams

./: .gitignore  README.md
MSTeamsBotJs/: .gitignore  index.js  index_old.js  package-lock.json  package.json
MSTeamsBotJs/appManifest/: manifest.json
MSTeamsBotJs/bots/: bot.js  dialog-bot.js  teams-bot.js
MSTeamsBotJs/dialogs/: main.js
MSTeamsBotJs/msgraph/: graph-client.js
MSTeamsBotPy/: config.py  pyproject.toml
MSTeamsBotPy/appPackage/: manifest.json
MSTeamsBotTs/: package.json  teamsapp.local.yml  teamsapp.yml
MSTeamsBotTs/appPackage/: manifest.json
MSTeamsBotTs/infra/: azure.parameters.json
Terraform/: apigateway.tf  lambda.tf  variables.tfvars
