[tool.poetry]
name = "teams-chat-poc"
version = "0.1.0"
description = ""
authors = ["Vincent Durano <vincent.durano@northbaysolutions.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
botbuilder-integration-aiohttp = ">=4.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
